Added Error page for failed connection, Added server, Added connection, Used Router, Added dotenv

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,10 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "module": "ESNext",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+  }
 }
