chnaged server port and added proper redirection, added text to theme, fixed connection, Added  connection error page and loading page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
   "compilerOptions": {
     "module": "ESNext",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    //"esModuleInterop": true,
   }
 }
