--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/poppins": "^5.0.14",
+    "@types/cors": "^2.8.17",
     "@types/react-router-dom": "^5.3.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "framer-motion": "^4.1.17",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
