Fixed dotenv undefined issues, Changed ConnectionError styling, simplified connection

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,5 +26,5 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
   },
-  "include": ["src"]
+  "include": ["src", "dotenv.config.ts"]
 }
