--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start-server": "npx tsx src/Database/Server.ts"
+    "start-server": "npx tsx src/Backend/Server.ts"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
@@ -17,6 +17,7 @@
     "@fontsource/poppins": "^5.0.14",
     "@types/cors": "^2.8.17",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -25,6 +26,7 @@
     "mongoose": "^8.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "typewriter-effect": "^2.21.0"
   },
