--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
+    "recharts": "^2.12.7",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
